# shared-expenses-app

./: .gitignore  AI_USAGE.md  DECISIONS.md  README.md  SCOPE.md
.kimchi/docs/: add_dummy_users.py
backend/: .env.example  Procfile  alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  extensions.py
backend/app/api/: __init__.py  auth.py  balances.py  expenses.py  groups.py  imports.py  settlements.py  users.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  expense.py  group.py  group_member.py  import_job.py  settlement.py  user.py
backend/app/schemas/: __init__.py  auth.py  balance.py  common.py  expense.py  group.py  import_job.py  settlement.py  user.py
backend/app/services/: __init__.py  anomaly_service.py  balance_service.py  csv_import_service.py  expense_service.py  group_service.py  settlement_service.py  user_service.py
backend/app/utils/: __init__.py  clerk.py  currency.py  dates.py  exceptions.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  HomePage.tsx  Login.tsx  Settings.tsx  SignUp.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
import_reports/: import_report_0aed8609.md  import_report_421b359d.md  import_report_5145afcf.md  import_report_cc5450f1.md
(+17 files in other folders)
