[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-expenses-backend"
version = "0.1.0"
description = "Shared Expenses App Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "flask-sqlalchemy==3.1.1",
    "flask-migrate==4.0.5",
    "flask-jwt-extended==4.6.0",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.3",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "alembic==1.13.1",
    "gunicorn==22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.3",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "faker==25.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"